# meraki-to-pihole

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPENDENCIES.md  DEPLOYMENT.md  DEVELOPERS.md  Dockerfile  README.md  REQUIREMENTS.md  cache.json  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh
.Jules/: palette.md
.github/workflows/: main.yml
.jules/: bolt.md  sentinel.md
app/: app.py  meraki_pihole_sync.py  sync_logic.py  sync_runner.py
app/clients/: meraki_client.py  pihole_client.py
app/static/: style.css
app/templates/: 404.html  500.html  docs.html  index.html
config/: config.ini.sample
scripts/: docker-entrypoint.sh  run_sync_for_cron.sh
terraform/: main.tf
tests/: test_app.py  test_app_e2e.py  test_clear_log.py  test_meraki_client.py  test_meraki_pihole_sync.py  test_middleware.py  test_pihole_client.py  test_update_interval.py  test_validation.py
