[tool.poetry]
name = "meraki-pihole-sync"
version = "0.1.0"
description = "A simple tool to sync Meraki clients to a Pi-hole instance."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
meraki = "^1.6.2"
requests = "^2.31.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"
pre-commit = "^3.5.0"
bump2version = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "T20", "SIM", "PTH", "ISC"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
