[tool.poetry]
name = "meraki-pihole-sync"
version = "0.1.0"
description = "A simple tool to sync Meraki clients to a Pi-hole instance."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
meraki = "^1.6.2"
requests = "^2.31.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
flask = "^3.1.1"
markdown = "^3.8.2"
httpx = "^0.27.0"
structlog = "^24.1.0"
types-requests = "^2.32.4.20250611"
types-markdown = "^3.8.0.20250708"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.1.6"
pre-commit = "^3.5.0"
bump2version = "^1.0.1"
bandit = "^1.7.9"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "T20", "SIM", "PTH", "ISC", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
